Closed Bug 364567 Opened 18 years ago Closed 18 years ago

nsMailboxService.cpp:231: warning: operation on 'typeIndex' may be undefined

Categories

(MailNews Core :: Backend, defect)

x86
All
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: wolfiR, Unassigned)

Details

Attachments

(1 file)

nsMailboxService.cpp:231: warning: operation on 'typeIndex' may be undefined

is what I get on Linux.
Attached patch patchSplinter Review
Attachment #249337 - Flags: superreview?(bienvenu)
Attachment #249337 - Flags: review?(bienvenu)
Comment on attachment 249337 [details] [diff] [review]
patch

thx for the patch. I'll try to land it myself soon, unless you have checkin privileges...
Attachment #249337 - Flags: superreview?(bienvenu)
Attachment #249337 - Flags: superreview+
Attachment #249337 - Flags: review?(bienvenu)
Attachment #249337 - Flags: review+
checked in on trunk
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: