Bug 364567 - fixed warning: operation on 'typeIndex' may be undefined, r+sr=bienvenu